--- a/style.css
+++ b/style.css
@@ -56,6 +56,18 @@ body {
   color: #42CD75;
 }
 
+/* NOTE: FOOTER */
+
+footer {
+  color: white;
+  background-color: rgba(87, 87, 87, 0.82);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+}
+
 /* NOTE: HOMEPAGE */
 
 #active {
@@ -99,7 +111,7 @@ body {
 }
 
 .about {
-  display: 40%
+  display: 40%;
 }
 
 .about-text {
