--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  background-image: url(./assets/bonsai-bg-small.JPG);
+  background-image: url(./assets/bonsai-bg-small.jpeg);
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,6 +27,7 @@ body {
 .logo {
   margin: 0.5rem;
   font-size: 2rem;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .logo a {
@@ -50,6 +53,7 @@ body {
   padding: 1rem;
   display: block;
   text-shadow: 3px 3px 16px #000;
+  transition: 300ms;
 }
 
 .link ul :hover {
@@ -65,7 +69,12 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 20px;
+  height: 30px;
+  text-align: center;
+}
+
+footer p {
+  padding-top: 5px;
 }
 
 /* NOTE: HOMEPAGE */
@@ -110,10 +119,6 @@ footer {
   padding-bottom: 5%;
 }
 
-.about {
-  display: 40%;
-}
-
 .about-text {
   background-color: rgba(87, 87, 87, 0.41);
   padding: 1rem;
@@ -142,6 +147,7 @@ footer {
   margin: auto;
   background-color: rgba(87, 87, 87, 0.41);
   color: white;
+  padding-bottom: 1em;
 }
 
 .work-page a {
@@ -192,7 +198,9 @@ footer {
   flex: 50%;
   padding: 5%;
   max-width: 100%;
+  list-style: none;
 }
+
 
 .container-contact h1 {
   padding-bottom: 5%;
@@ -200,6 +208,7 @@ footer {
 
 .container-contact ul {
   margin-left: 40px;
+  list-style: none;
 }
 
 .container-contact ul a {
@@ -262,12 +271,38 @@ footer {
   }
 
   .container-bio {
+    width: 100%;
+    padding: 0;
+    padding-bottom: 2rem;
+  }
+
+  #headshot {
+    padding-top: 2rem;
+
+  }
+
+  .about-text {
     max-width: 100%;
   }
 
   .container-contact {
     max-width: 100%;
     margin: 0;
+    flex-direction: column;
+    padding-bottom: 2rem;
+  }
+
+  .links ul {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .links span {
+    visibility: hidden;
+  }
+
+  .work-page {
+    width: 100%;
   }
 
 }
