--- a/style.css
+++ b/style.css
@@ -53,11 +53,11 @@ body {
   padding: 1rem;
   display: block;
   text-shadow: 3px 3px 16px #000;
-  transition: 300ms;
 }
 
 .link ul :hover {
   color: #42CD75;
+  transition: 300ms;
 }
 
 /* NOTE: FOOTER */
@@ -208,11 +208,9 @@ footer p {
 
 .container-contact ul {
   margin-left: 40px;
-  list-style: none;
 }
 
 .container-contact ul a {
-  text-decoration: none;
   color: white;
 }
 
@@ -226,6 +224,16 @@ footer p {
   margin-top: 2.4rem;
   font-size: 1.5em;
   text-overflow: ellipsis;
+}
+
+.links ul img {
+  padding-right: 0.5rem;
+  vertical-align: bottom;
+}
+
+.links ul li{
+  padding: 0.2rem;
+  list-style: none;
 }
 
 /* NOTE: RESPONSIVE */
@@ -295,14 +303,59 @@ footer p {
   .links ul {
     display: flex;
     justify-content: space-around;
+    margin: 0;
+    padding: 0;
   }
 
   .links span {
-    visibility: hidden;
+    display: none;
   }
 
   .work-page {
     width: 100%;
+  }
+
+}
+
+@media print {
+
+  * {
+    color: black;
+    text-decoration: none;
+  }
+
+  img {
+    filter: grayscale(100%);
+  }
+
+  iframe {
+    visibility: hidden;
+  }
+
+  section a::after {
+    content: " (" attr(href) ") ";
+  }
+
+  .navbar {
+    visibility: hidden;
+  }
+
+  #active {
+    visibility: visible;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+
+  #active a {
+    color: black;
+    font-size: 3rem;
+    text-shadow: none;
+    font-weight: 600;
+    justify-content: center;
   }
 
 }
